# CS5330_P2

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  USEME.md  cbir.cpp  cbir.h  fileread.cpp  generate_embeddings.cpp  gui.cpp  imgui.ini  main.cpp
__MACOSX/: ._resnet18-v2-7.onnx
olympus/: imgui.ini
